name:                neobot
version:             0.1.0.0
synopsis:            A cool IRC bot
description:         A cool IRC bot
homepage:            https://github.com/neobrain/neobot
license:             BSD3
license-file:        LICENSE
author:              Tony Wasserka
maintainer:          neobrainx@gmail.com
copyright:           2016 Tony Wasserka
build-type:          Simple
extra-source-files:
  app/Config.hs,
  app/Ghhooks.hs
cabal-version:       >=1.10

executable neobot
  hs-source-dirs:      app
  main-is:             bot.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -dynamic
  build-depends:       base,
                       aeson >= 0.11.0.0,
                       async,
                       basic-prelude == 0.5.2,
                       blaze-builder,
                       bytestring,
                       containers,
                       either,
                       github,
                       github-post-receive,
                       hashable,
                       heist == 0.14.1.4,
                       http-conduit == 2.1.10.1,
                       http-types,
                       irc-conduit,
                       lens,
                       mediawiki,
                       network,
                       random,
                       regex-posix,
                       split,
                       stm,
                       text,
                       unordered-containers,
                       wai == 3.2.1.1,
                       wai-logger == 2.2.7,
                       warp == 3.2.6
  default-language:    Haskell2010
  extensions: OverloadedStrings, TupleSections, FlexibleContexts, ViewPatterns

source-repository head
  type:     git
  location: https://github.com/neobrain/neobot
